_cmd/binder/frontend/src/assets/Menu.css
#binderMenu {
    display: flex;
    margin-top: 0px;
    width: 42px;
    max-width: 42px;
    flex-flow: column;
    justify-content: flex-start;

    border-right: 1px solid #343434;
    background-color: #191919;
    color: #e9e9e9;
}


#menu {
    position: relative;
    width: 250px;
    max-width: 250px;
    min-width: 250px;
    overflow: auto;
    transition: width 0.5s,min-width 0.5s;

    background-color: #292929;
    color: #e9e9e9;
}

#menu.hideMenu {
    width: 0px;
    max-width: 0px;
    min-width: 0px;
}

#menuCollapseBar {
    position: absolute;
    top: 0;
    right: 0;
    z-index: 1;
}

#leftContent {
    overflow: auto !important;
    border:0;
    height:100%;
    max-height:100%;
    white-space: nowrap;
    box-sizing: border-box;
    padding-top: 8px;

    background-color: #191919;
    color: #f1f1f1;
    --wails-draggable:no-drag;
}


button.leftButton {
  margin-left:0px !important;
  margin-right:0px !important;
}

#settingButton {
  margin-top:auto !important;
}

div.leftButton.active {
  border-left: 4px solid #00ff00;
  border-radius: 0px !important;
}


#tree div.content {
  margin:0px ;
  padding:2px ;
}

#tree div.content:hover {
  background-color: rgba(0,0,255,0.2);
}

#tree div.content.selected {
  background-color: rgba(0,0,255,0.4);
}

#tree div.content > div:first-child {
  margin-right:0px;
}

.codeSample > div > textarea {
  color :inherit !important
}

#expandButton {
  margin-right:0px !important;
}

#expandIcon {
  transform: rotate(90deg);
}

svg.openIcon {
  transform: rotate(270deg);
}

